Basic mock layout

--- a/index.html
+++ b/index.html
@@ -3,6 +3,22 @@
   <title>Backchat</title>
 </head>
 <body>
-  Hello world!
+  <section class='message-area'>
+    <div class='message'>
+      Hello world!
+    </div>
+  </section>
+
+  <section class='input-area'>
+    <label>
+      Author
+      <input type='text' class='author-input' />
+    </label>
+
+    <label>
+      Message
+      <input type='text' class='message-input' />
+    </label>
+  </section>
 </body>
 </html>
